<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.HowToUseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_layout" />


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.storyPost.PhotoVideoDownloader.view.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="How to Download Profile Photo?"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.storyPost.PhotoVideoDownloader.view.RegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/download_profile_photo"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.storyPost.PhotoVideoDownloader.view.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="How to Download Stories?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.storyPost.PhotoVideoDownloader.view.RegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/download_stories"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.storyPost.PhotoVideoDownloader.view.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="15dp"
                android:text="How to Download post on InstaSaver?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.storyPost.PhotoVideoDownloader.view.RegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/download_post"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <com.storyPost.PhotoVideoDownloader.view.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="15dp"
                android:text="@string/how_to_download_igtv_videos_on_instasaver"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.storyPost.PhotoVideoDownloader.view.RegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/download_igtv"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        />

</LinearLayout>