<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:animateLayoutChanges="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stories_overview_username"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:overScrollMode="never"
        android:layout_below="@id/stories_overview_username"
        android:id="@+id/stories_overview_rv"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:id="@+id/no_net_overview_stories">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_refresh"
            android:background="@android:color/transparent"
            android:id="@+id/refresh_overview_stories_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/error_loading_instagram_stories"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/please_check_internet_connection_then_tap_refresh"/>

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/loading_stories_overview"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent"
        android:layout_gravity="center"
        style="@style/SpinKitView.Large.Wave"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:id="@+id/no_stories_found">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_sad"
            android:id="@+id/sad_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/fave_text1"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/no_stories"/>

    </LinearLayout>


</RelativeLayout>