<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stories_overview_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:overScrollMode="never" />

        <com.storyPost.PhotoVideoDownloader.view.RegularTextView
            android:id="@+id/no_downloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="No Downloads Found"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/no_net_overview_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/refresh_overview_stories_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_refresh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/error_loading_instagram_stories"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/please_check_internet_connection_then_tap_refresh"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading_stories_overview"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/no_stories_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/sad_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_sad" />

        <TextView
            android:id="@+id/fave_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_stories"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>